<resources>
    <string name="app_name">"Luria's Test"</string>

    <string name="buttonNewTest">"Test A"</string>
    <string name="buttonRepeatTest">"Test B"</string>
    <string name="buttonEditData">"Test C"</string>

    <string name="buttonClear">"Clear"</string>
    <string name="buttonMore">"Help"</string>
    <string name="buttonEnd">"End test"</string>

    <string name="textFirstName">"First name"</string>
    <string name="editTextFirstName">"Enter your first name"</string>

    <string name="textLastName">"Last name"</string>
    <string name="editTextLastName">"Enter your last name"</string>

    <string name="textAge">"Age"</string>
    <string name="editTextAge">"Enter your age"</string>

    <string name="textIDNumber">"ID number"</string>
    <string name="editTextIDNumber">"Enter your ID number"</string>

    <string name="textDescription">"Description (if needed)"</string>
    <string name="editTextDescription">"Enter description"</string>

    <string name="buttonSave">"Save"</string>
    <string name="buttonTest">"Start test now"</string>

    <string name="buttonBack">"Back"</string>
    <string name="buttonMemory">"Memory"</string>

    <string name="alertTitle">"Warning"</string>
    <string name="alert">"Are you sure you want to clear canvas?"</string>
    <string name="clear">"Clear"</string>
    <string name="cancel">"Cancel"</string>

    <string name="tutorialTitle">"Look at the symbol below. Try to draw the same symbol 10 times starting on the left of the screen, between two marks."</string>
    <string name="helpBTitle">"Look at the symbol below. Try to draw the same symbol 10 times starting on the left of the screen. Start where the symbol on the screen ends."</string>
    <string name="helpCTitle">"Try to connect the dots on the screen, to make it looks like the symbol below."</string>

    <string name="firstName">"First name: "</string>
    <string name="lastName">"Last name: "</string>
    <string name="age">"Age: "</string>
    <string name="ID">"ID number: "</string>
    <string name="description">"Description: "</string>

    <string name="textTime">"Date:"</string>
    <string name="stringDate">"date"</string>

</resources>
