<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="15dp">

<ImageView
    android:id="@+id/logo"
    android:layout_width="180dp"
    android:layout_height="180dp"
    android:src="@drawable/logo_luria"
    android:layout_centerHorizontal="true"
    android:padding="20dp"/>

<TextView
    android:id="@+id/textFirstName"
    android:layout_width="120dp"
    android:layout_height="wrap_content"

    android:layout_alignBaseline="@+id/editTextFirstName"
    android:layout_below="@id/logo"

    android:fontFamily="sans-serif"
    android:text="@string/textFirstName"

    android:textAllCaps="false"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="20sp"
    android:typeface="monospace" />

<EditText
    android:hint="@string/editTextFirstName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"

    android:textColor="@color/colorAccent"
    android:background="@drawable/mybutton"

    android:layout_toRightOf="@id/textFirstName"
    android:layout_below="@id/logo"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/editTextFirstName"/>

<TextView
    android:text="@string/textLastName"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"

    android:textColor="@color/colorPrimaryDark"
    android:layout_below="@id/textFirstName"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/textLastName"/>

<EditText
    android:hint="@string/editTextLastName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingLeft="10dp"

    android:textColor="@color/colorAccent"
    android:background="@drawable/mybutton"

    android:layout_toRightOf="@id/textLastName"
    android:layout_below="@id/editTextFirstName"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/editTextLastName"/>

<TextView
    android:text="@string/textAge"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"

    android:textColor="@color/colorPrimaryDark"
    android:layout_below="@id/textLastName"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/textAge"/>

<EditText
    android:hint="@string/editTextAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingLeft="10dp"

    android:textColor="@color/colorAccent"
    android:background="@drawable/mybutton"

    android:layout_toRightOf="@id/textAge"
    android:layout_below="@id/editTextLastName"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/editTextAge"/>

<TextView
    android:text="@string/textIDNumber"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"

    android:textColor="@color/colorPrimaryDark"
    android:layout_below="@id/textAge"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/textIDNumber"/>

<EditText
    android:hint="@string/editTextIDNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingLeft="10dp"

    android:textColor="@color/colorAccent"
    android:background="@drawable/mybutton"

    android:layout_toRightOf="@id/textIDNumber"
    android:layout_below="@id/editTextAge"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/editTextIDNumber"/>

<TextView
    android:text="@string/textDescription"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"

    android:textColor="@color/colorPrimaryDark"
    android:layout_below="@id/textIDNumber"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/textDescription"/>

<EditText
    android:hint="@string/editTextDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingLeft="10dp"

    android:textColor="@color/colorAccent"
    android:background="@drawable/mybutton"

    android:layout_toRightOf="@id/textDescription"
    android:layout_below="@id/editTextIDNumber"

    android:fontFamily="sans-serif"
    android:typeface="monospace"
    android:textAllCaps="false"
    android:textSize="20dp"

    android:id="@+id/editTextDescription"/>

</RelativeLayout>