<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/allRelativeLayout"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <TextView
        android:id="@+id/name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:typeface="monospace"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/logo_luria"
        android:layout_centerHorizontal="true"
        android:padding="5dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="160dp"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTime"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/stringDate"
                android:fontFamily="sans-serif"
                android:text="@string/textTime"
                android:layout_below="@id/textTime"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:typeface="monospace"/>

            <TextView
                android:id="@+id/stringDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textTime"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:typeface="monospace"/>

            <TextView
                android:text="@string/textFirstName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@id/textTime"
                android:fontFamily="sans-serif"
                android:typeface="monospace"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:id="@+id/textFirstName"/>

            <EditText
                android:hint="@string/editTextFirstName"
                android:maxLines="1"
                android:lines="1"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/mybutton"
                android:layout_toEndOf="@id/textFirstName"
                android:layout_below="@id/stringDate"
                android:fontFamily="sans-serif"
                android:typeface="monospace"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:id="@+id/editTextFirstName"
                android:imeOptions="actionDone"/>

        <TextView
            android:text="@string/textLastName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/textFirstName"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/textLastName"/>

        <EditText
            android:hint="@string/editTextLastName"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/mybutton"
            android:layout_toEndOf="@id/textLastName"
            android:layout_below="@id/editTextFirstName"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/editTextLastName"
            android:imeOptions="actionDone"/>

        <TextView
        android:text="@string/textAge"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/textLastName"
        android:fontFamily="sans-serif"
        android:typeface="monospace"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:id="@+id/textAge"/>

        <EditText
            android:hint="@string/editTextAge"
            android:maxLines="1"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/mybutton"
            android:layout_toEndOf="@id/textAge"
            android:layout_below="@id/editTextLastName"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/editTextAge"
            android:imeOptions="actionDone"/>

        <TextView
            android:text="@string/textIDNumber"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/textAge"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/textIDNumber"/>

        <EditText
            android:hint="@string/editTextIDNumber"
            android:maxLines="1"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/mybutton"
            android:layout_toEndOf="@id/textIDNumber"
            android:layout_below="@id/editTextAge"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/editTextIDNumber"
            android:imeOptions="actionDone"/>

        <TextView
            android:text="@string/textDescription"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/textIDNumber"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/textDescription"/>

        <EditText
            android:hint="@string/editTextDescription"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/mybutton"
            android:layout_toEndOf="@id/textDescription"
            android:layout_below="@id/editTextIDNumber"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/editTextDescription"
            android:imeOptions="actionDone"/>

        <Button
            android:text="@string/buttonTest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/mybutton"
            android:layout_below="@id/editTextDescription"
            android:fontFamily="sans-serif"
            android:typeface="monospace"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/buttonTest"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>